# Coding-Agent

./: .gitignore  Readme.md  app.py  pyproject.toml
src/: agent.py  config.py  prompts.py  tools.py
