[project]
name = "coding-agent"
version = "0.1.0"
description = "A LangGraph-powered coding agent that writes and fixes code, with a Streamlit UI. Supports Groq and Google Gemini models."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "streamlit>=1.38.0",
    "langchain>=1.0.0",
    "langchain-core>=0.3.15",
    "langgraph>=0.2.45",
    "langchain-groq>=0.2.1",
    "langchain-google-genai>=2.0.4",
    "google-genai>=1.2.0",
    "python-dotenv>=1.0.1",
    "groq>=0.11.0",
]

[tool.uv]
package = false